--- a/Prism.HomeAssistant.Functions/Prism.HomeAssistant.Functions.csproj
+++ b/Prism.HomeAssistant.Functions/Prism.HomeAssistant.Functions.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
+        <PackageReference Include="Polly" Version="7.2.3" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
